# reap

./: .gitignore  .release-it.json  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  package-lock.json  package.json  release.toml  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
crates/reap/: Cargo.toml
crates/reap/src/: churn.rs  config.rs  detect.rs  explain.rs  hotspots.rs  main.rs  report.rs  report_filter.rs  threshold.rs  types.rs
crates/reap/src/analyze/: circular.rs  complexity.rs  deps.rs  duplicates.rs  large_functions.rs  mod.rs  refactoring_targets.rs  unused_exports.rs  unused_files.rs
crates/reap/src/java/: discover.rs  extract.rs  graph.rs  mod.rs  model.rs  parse.rs
src/: cli.ts  config.ts  detect.ts  output.ts  threshold.ts  types.ts
src/java/: hotspots.ts  index.ts  maven.ts  pmd.ts  spotbugs.ts  utils.ts
src/ts/: index.ts
