[package]
name = "reap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code health scanner for Java — git hotspots, complexity, duplicates, dead code, dependencies"

[[bin]]
name = "reap"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
tree-sitter = "0.25"
tree-sitter-java = "0.23"
walkdir = "2"
rayon = "1"
globset = "0.4"
